2010-11-07 version 1.3.1

Added a touch of color to the UI and ability to delete a client.


2010-11-07 version 1.3.0

Added OAuth authorization console.

Added param_authentication option: turn this on if you need to support
oauth_token query parameter or form field. Disabled by default.

Added host option: only check requests sent to that host (e.g. only check
requests to api.example.com).

Added path option: only check requests under this path (e.g. only check
requests for /api/...).


2010-11-03 version 1.2.2

Store ObjectId references in database.


2010-11-03 version 1.2.1

Make sure order of scope no longer important for access token lookup.


2010-11-02 version 1.2.0

You can now redirect to /oauth/authorize with authorization query parameter and
it will do the right thing.


2010-11-02 version 1.1.1

Fixed missing rails/init.rb.


2010-11-02 version 1.1.0

Renamed oauth.resource as oauth.identity to remove confusion, besides, it's
more often identity than anything else.

Added automagic loading under Rails, no need to require special path.

Added Rack::OAuth2::Server::Options class, easier to user than Hash.

Added indexes for speedier queries.


2010-11-02 version 1.0.0

World premiere.