@@ -115,6 +115,11 @@ Sammy("#main", function(app) {
       }
     });
   });
+  // Signout
+  this.get("#/signout", function(context) {
+    app.session("oauth.token", null);
+    context.redirect(document.location.protocol + "//" + document.location.host);
+  });
 
   // Links that use forms for various methods (i.e. post, delete).
   $("a[data-method]").live("click", function(evt) {
