@@ -20,6 +20,7 @@
       <div class="title">
         <a href="#/"><img src="admin/images/oauth-2.png"> OAuth Console</a>
       </div>
+      <a href="#/signout" class="signout">Sign out</a>
     </div>
     <div id="main"></div>
     <div id="footer">
